--- a/www/css/base.css
+++ b/www/css/base.css
@@ -25,7 +25,7 @@ body {
 	line-height: 1.4em;
 	background: #eaeaea url('bg.png');
 	color: #4d4d4d;
-	width: 550px;
+	width: 95%;
 	margin: 0 auto;
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
@@ -34,7 +34,7 @@ body {
 	font-smoothing: antialiased;
 }
 
-#todoapp {
+#sparkapp {
 	background: #fff;
 	background: rgba(255, 255, 255, 0.9);
 	margin: 130px 0 40px 0;
@@ -46,7 +46,7 @@ body {
 				0 25px 50px 0 rgba(0, 0, 0, 0.15);
 }
 
-#todoapp:before {
+#sparkapp:before {
 	content: '';
 	border-left: 1px solid #f5d6d6;
 	border-right: 1px solid #f5d6d6;
@@ -57,16 +57,16 @@ body {
 	height: 100%;
 }
 
-#todoapp input::-webkit-input-placeholder {
+#sparkapp input::-webkit-input-placeholder {
 	font-style: italic;
 }
 
-#todoapp input::-moz-placeholder {
+#sparkapp input::-moz-placeholder {
 	font-style: italic;
 	color: #a9a9a9;
 }
 
-#todoapp h1 {
+#sparkapp h1 {
 	position: absolute;
 	top: -120px;
 	width: 100%;
@@ -109,12 +109,12 @@ body {
 	border-top-right-radius: 1px;
 }
 
-#new-todo,
+#new-spark,
 .edit {
 	position: relative;
 	margin: 0;
 	width: 100%;
-	font-size: 24px;
+	font-size: 20px;
 	font-family: inherit;
 	line-height: 1.4em;
 	border: 0;
@@ -135,7 +135,7 @@ body {
 	font-smoothing: antialiased;
 }
 
-#new-todo {
+#new-spark {
 	padding: 16px 16px 16px 60px;
 	border: none;
 	background: rgba(0, 0, 0, 0.02);
@@ -148,102 +148,51 @@ body {
 	z-index: 2;
 	border-top: 1px dotted #adadad;
 }
-
-label[for='toggle-all'] {
-	display: none;
-}
-
-#toggle-all {
-	position: absolute;
-	top: -42px;
-	left: -4px;
-	width: 40px;
-	text-align: center;
-	border: none; /* Mobile Safari */
-}
-
-#toggle-all:before {
-	content: '»';
-	font-size: 28px;
-	color: #d9d9d9;
-	padding: 0 25px 7px;
-}
-
-#toggle-all:checked:before {
-	color: #737373;
-}
-
-#todo-list {
+#spark-list {
 	margin: 0;
 	padding: 0;
+	padding-left: 50px;
 	list-style: none;
 }
 
-#todo-list li {
+#spark-list li {
 	position: relative;
-	font-size: 24px;
+	font-size: 20px;
 	border-bottom: 1px dotted #ccc;
 }
 
-#todo-list li:last-child {
+#spark-list li:last-child {
 	border-bottom: none;
 }
 
-#todo-list li.editing {
+#spark-list li.editing {
 	border-bottom: none;
 	padding: 0;
 }
 
-#todo-list li.editing .edit {
+#spark-list li.editing .edit {
 	display: block;
 	width: 506px;
 	padding: 13px 17px 12px 17px;
 	margin: 0 0 0 43px;
 }
 
-#todo-list li.editing .view {
+#spark-list li.editing .view {
 	display: none;
 }
 
-#todo-list li .toggle {
-	text-align: center;
-	width: 40px;
-	/* auto, since non-WebKit browsers doesn't support input styling */
-	height: auto;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	margin: auto 0;
-	border: none; /* Mobile Safari */
-	-webkit-appearance: none;
-	/*-moz-appearance: none;*/
-	-ms-appearance: none;
-	-o-appearance: none;
-	appearance: none;
+#spark-list li span.when {
+	color: #ccc;
+	font-size: 15px;
 }
 
-#todo-list li .toggle:after {
-	content: '✔';
-	line-height: 43px; /* 40 + a couple of pixels visual adjustment */
-	font-size: 20px;
-	color: #d9d9d9;
-	text-shadow: 0 -1px 0 #bfbfbf;
-}
-
-#todo-list li .toggle:checked:after {
-	color: #85ada7;
-	text-shadow: 0 1px 0 #669991;
-	bottom: 1px;
-	position: relative;
-}
-
-#todo-list li label {
-	white-space: pre;
+#spark-list li p.spark {
 	word-break: break-word;
-	padding: 15px 60px 15px 15px;
-	margin-left: 45px;
 	display: block;
 	line-height: 1.2;
+	overflow: hidden;
+	margin-top: 0;
+	height: 1.2em;
 	-webkit-transition: color 0.4s;
 	-moz-transition: color 0.4s;
 	-ms-transition: color 0.4s;
@@ -251,12 +200,11 @@ label[for='toggle-all'] {
 	transition: color 0.4s;
 }
 
-#todo-list li.completed label {
-	color: #a9a9a9;
-	text-decoration: line-through;
+#spark-list li.expanded p {	
+	height: auto;
 }
 
-#todo-list li .destroy {
+#spark-list li .destroy {
 	display: none;
 	position: absolute;
 	top: 0;
@@ -274,7 +222,7 @@ label[for='toggle-all'] {
 	transition: all 0.2s;
 }
 
-#todo-list li .destroy:hover {
+#spark-list li .destroy:hover {
 	text-shadow: 0 0 1px #000,
 				 0 0 10px rgba(199, 107, 107, 0.8);
 	-webkit-transform: scale(1.3);
@@ -284,19 +232,19 @@ label[for='toggle-all'] {
 	transform: scale(1.3);
 }
 
-#todo-list li .destroy:after {
+#spark-list li .destroy:after {
 	content: '✖';
 }
 
-#todo-list li:hover .destroy {
+#spark-list li.expanded .destroy {
 	display: block;
 }
 
-#todo-list li .edit {
+#spark-list li .edit {
 	display: none;
 }
 
-#todo-list li.editing:last-child {
+#spark-list li.editing:last-child {
 	margin-bottom: -1px;
 }
 
@@ -327,7 +275,7 @@ label[for='toggle-all'] {
 				0 44px 2px -6px rgba(0, 0, 0, 0.2);
 }
 
-#todo-count {
+#spark-count {
 	float: left;
 	text-align: left;
 }
@@ -390,11 +338,11 @@ label[for='toggle-all'] {
 */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 	#toggle-all,
-	#todo-list li .toggle {
+	#spark-list li .toggle {
 		background: none;
 	}
 
-	#todo-list li .toggle {
+	#spark-list li .toggle {
 		height: 40px;
 	}
 
@@ -549,7 +497,7 @@ hr {
 	/**body*/.learn-bar > .learn {
 		left: 8px;
 	}
-	/**body*/.learn-bar #todoapp {
+	/**body*/.learn-bar #sparkapp {
 		width: 550px;
 		margin: 130px auto 40px auto;
 	}
