--- a/www/css/app.css
+++ b/www/css/app.css
@@ -21,43 +21,35 @@ button {
 	appearance: none;
 }
 
-/*body {
-	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	line-height: 1.4em;
-	background: #eaeaea url('bg.png');
-	color: #4d4d4d;
-	width: 95%;
-	margin: 0 auto;
-	-webkit-font-smoothing: antialiased;
-	-moz-font-smoothing: antialiased;
-	-ms-font-smoothing: antialiased;
-	-o-font-smoothing: antialiased;
-	font-smoothing: antialiased;
-}*/
+#editor {
+	display: block;
+    position: fixed;
+    bottom: 0px;
+    top: 50%;
+    height: 50%;
+    background: none repeat scroll 0% 0% #DDD;
+    width: 100%;
+    z-index: 100;
+}
+
+#editor textarea {
+	width: 100%;
+    height: 100%;
+    display: block;
+    background: none repeat scroll 0% 0% #CCC;
+    border: medium none;
+    padding: 2em;
+    font-family: "Source Sans Pro";
+    font-weight: 300;
+    border-top: 2px solid #eee;
+    overflow-y: scroll;
+}
+}
 
 #sparkapp {
-/*	background: #fff;
-	background: rgba(255, 255, 255, 0.9);*/
 	margin: 10px 0 40px 0;
-	/*border: 1px solid #ccc;*/
 	position: relative;
-/*	border-top-left-radius: 2px;
-	border-top-right-radius: 2px;
-	box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2),
-				0 25px 50px 0 rgba(0, 0, 0, 0.15);*/
 }
-/*
-#sparkapp:before {
-	content: '';
-	border-left: 1px solid #f5d6d6;
-	border-right: 1px solid #f5d6d6;
-	width: 2px;
-	position: absolute;
-	top: 0;
-	left: 40px;
-	height: 100%;
-}*/
-
 #sparkapp input::-webkit-input-placeholder {
 	font-style: italic;
 }
@@ -90,32 +82,6 @@ button {
 	border: 1px solid #EDEDED;
 	box-shadow: 2px 2px 2px #DDD
 }
-
-/*#header {
-	padding-top: 15px;
-	border-radius: inherit;
-}
-
-#header:before {
-	content: '';
-	position: absolute;
-	top: 0;
-	right: 0;
-	left: 0;
-	height: 15px;
-	z-index: 2;
-	border-bottom: 1px solid #6c615c;
-	background: #8d7d77;
-	background: -webkit-gradient(linear, left top, left bottom, from(rgba(132, 110, 100, 0.8)),to(rgba(101, 84, 76, 0.8)));
-	background: -webkit-linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
-	background: -moz-linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
-	background: -o-linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
-	background: -ms-linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
-	background: linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
-	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#9d8b83', EndColorStr='#847670');
-	border-top-left-radius: 1px;
-	border-top-right-radius: 1px;
-}*/
 
 #new-spark,
 .expanding-clone,
@@ -207,9 +173,6 @@ button {
     padding-right: 90px;
 }
 
-#spark-list li.editing .view {
-	display: none;
-}
 
 #spark-list li span.when {
 	color: #ccc;
@@ -245,6 +208,7 @@ button {
 	display: none;
 }
 
+#editor .actions, 
 #spark-list li.expanded .actions {
 	display: block;
 	position: absolute;
@@ -287,51 +251,6 @@ button {
 				0 44px 2px -6px rgba(0, 0, 0, 0.2);
 }
 
-#spark-count {
-	float: left;
-	text-align: left;
-}
-
-#filters {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	position: absolute;
-	right: 0;
-	left: 0;
-}
-
-#filters li {
-	display: inline;
-}
-
-#filters li a {
-	color: #83756f;
-	margin: 2px;
-	text-decoration: none;
-}
-
-#filters li a.selected {
-	font-weight: bold;
-}
-
-#clear-completed {
-	float: right;
-	position: relative;
-	line-height: 20px;
-	text-decoration: none;
-	background: rgba(0, 0, 0, 0.1);
-	font-size: 11px;
-	padding: 0 10px;
-	border-radius: 3px;
-	box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.2);
-}
-
-#clear-completed:hover {
-	background: rgba(0, 0, 0, 0.15);
-	box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.3);
-}
-
 #info {
 	margin: 65px auto 0;
 	color: #a6a6a6;
@@ -344,31 +263,6 @@ button {
 	color: inherit;
 }
 
-/*
-	Hack to remove background from Mobile Safari.
-	Can't use it globally since it destroys checkboxes in Firefox and Opera
-*/
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-	#toggle-all,
-	#spark-list li .toggle {
-		background: none;
-	}
-
-	#spark-list li .toggle {
-		height: 40px;
-	}
-
-	#toggle-all {
-		top: -56px;
-		left: -15px;
-		width: 65px;
-		height: 41px;
-		-webkit-transform: rotate(90deg);
-		transform: rotate(90deg);
-		-webkit-appearance: none;
-		appearance: none;
-	}
-}
 
 .hidden {
 	display: none;
@@ -379,138 +273,4 @@ hr {
 	border: 0;
 	border-top: 1px dashed #C5C5C5;
 	border-bottom: 1px dashed #F7F7F7;
-}
-
-.learn a {
-	font-weight: normal;
-	text-decoration: none;
-	color: #b83f45;
-}
-
-.learn a:hover {
-	text-decoration: underline;
-	color: #787e7e;
-}
-
-.learn h3,
-.learn h4,
-.learn h5 {
-	margin: 10px 0;
-	font-weight: 500;
-	line-height: 1.2;
-	color: #000;
-}
-
-.learn h3 {
-	font-size: 24px;
-}
-
-.learn h4 {
-	font-size: 18px;
-}
-
-.learn h5 {
-	margin-bottom: 0;
-	font-size: 14px;
-}
-
-.learn ul {
-	padding: 0;
-	margin: 0 0 30px 25px;
-}
-
-.learn li {
-	line-height: 20px;
-}
-
-.learn p {
-	font-size: 15px;
-	font-weight: 300;
-	line-height: 1.3;
-	margin-top: 0;
-	margin-bottom: 0;
-}
-
-.quote {
-	border: none;
-	margin: 20px 0 60px 0;
-}
-
-.quote p {
-	font-style: italic;
-}
-
-.quote p:before {
-	content: '“';
-	font-size: 50px;
-	opacity: .15;
-	position: absolute;
-	top: -20px;
-	left: 3px;
-}
-
-.quote p:after {
-	content: '”';
-	font-size: 50px;
-	opacity: .15;
-	position: absolute;
-	bottom: -42px;
-	right: 3px;
-}
-
-.quote footer {
-	position: absolute;
-	bottom: -40px;
-	right: 0;
-}
-
-.quote footer img {
-	border-radius: 3px;
-}
-
-.quote footer a {
-	margin-left: 5px;
-	vertical-align: middle;
-}
-
-.speech-bubble {
-	position: relative;
-	padding: 10px;
-	background: rgba(0, 0, 0, .04);
-	border-radius: 5px;
-}
-
-.speech-bubble:after {
-	content: '';
-	position: absolute;
-	top: 100%;
-	right: 30px;
-	border: 13px solid transparent;
-	border-top-color: rgba(0, 0, 0, .04);
-}
-
-/**body*/.learn-bar > .learn {
-	position: absolute;
-	width: 272px;
-	top: 8px;
-	left: -300px;
-	padding: 10px;
-	border-radius: 5px;
-	background-color: rgba(255, 255, 255, .6);
-	transition-property: left;
-	transition-duration: 500ms;
-}
-
-@media (min-width: 899px) {
-	/**body*/.learn-bar {
-		width: auto;
-		margin: 0 0 0 300px;
-	}
-	/**body*/.learn-bar > .learn {
-		left: 8px;
-	}
-	/**body*/.learn-bar #sparkapp {
-		width: 550px;
-		margin: 130px auto 40px auto;
-	}
 }
